# Autonomously-Navigating-a-Robot-using-RRT-Path-Planning-algorithm-in-ROS

./: README.md
kobuki_description/urdf/: kobuki_gazebo.urdf.xacro
path_planning/: CMakeLists.txt  package.xml
path_planning/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
path_planning/launch/: move_base.launch  plan_path.launch  simulation.launch
path_planning/maps/: res_world_map.pgm  res_world_map.yaml
path_planning/models/concrete_barrier_14m/: model.config  model.sdf
path_planning/models/concrete_barrier_14m/meshes/: concrete_barrier_14m.dae
path_planning/models/concrete_cube_1m/: model.config  model.sdf
path_planning/models/concrete_cube_1m/meshes/: concrete_cube_1m.dae
path_planning/models/floor_tiles/: model.config  model.sdf
path_planning/models/floor_tiles/materials/scripts/: floor_tiles.material
path_planning/rviz/: path_planning_config.rviz
path_planning/scripts/: rrt.py
path_planning/worlds/: restaurant_world.world
pp_msgs/: CMakeLists.txt  package.xml
pp_msgs/srv/: PathPlanningPlugin.srv
pp_plugin/: CMakeLists.txt  package.xml  pp_plugin.xml
pp_plugin/include/: pp_plugin.h
pp_plugin/src/: pp_plugin.cpp
turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro
