<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The path_planning package</description>

  <maintainer email="ashay@todo.todo">ashay</maintainer>

  <license>TODO</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pp_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>pp_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>pp_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
